yaml fixes & main.py fixes
